Added a new button for the contact panel Updated contact panel width Reduced contact panel close button size ready #25

--- a/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
@@ -24,7 +24,7 @@
 		<!-- /ko -->
 
 		<!-- ko component: {
-			name: 'button/button-main',
+			name: 'button/button-secondary',
 			onComplete: $root.controller.callbackCounter.get(),
 			options: {
 				action: {
