--- a/deploy/htdocs/version/src/inc/style/component/slideout-panel/global-slideout-panel/_contact.scss
+++ b/deploy/htdocs/version/src/inc/style/component/slideout-panel/global-slideout-panel/_contact.scss
@@ -9,8 +9,9 @@
 		margin-top: $sizeGrid;
 	}
 
-	.component-button-main {
+	.component-button-secondary {
 		margin-top: $sizeGrid;
 		display: block;
+		width: 100%;
 	}
 }
