--- a/deploy/htdocs/version/src/inc/template/partial/asset/link/link-main.html
+++ b/deploy/htdocs/version/src/inc/template/partial/asset/link/link-main.html
@@ -1,1 +1,1 @@
-<a class="link-main link" href="" data-bind="html: label, gaiaOpenLink: $data"></a>
+<a class="link-main link" href="" data-bind="html: label, gaiaOpenLink: $data, attr: {title: $data.title}"></a>
