Default cursor on the call to reach button ready #17

--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -2,6 +2,7 @@
 	@include size(auto, $sizeGrid * 2);
 	text-transform: uppercase;
 	color: $colorPrimary;
+	cursor: default;
 	padding: 0 $sizeGrid / 2;
 
 	.text {
