Added pagination to the path to purchase block on mobile ready #18

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -20,5 +20,14 @@
 				</li>
 			</ul>
 		</div>
+		<!-- ko component: {
+			name: 'paginator-dashed',
+			onComplete: $root.controller.callbackCounter.get($root.controller.handlePaginatorReady.bind($root.controller)),
+			options: {
+				items: data.steps,
+				currentPage: $root.activeIndex,
+				orientation: $root.Orientation.HORIZONTAL
+			}
+		} --><!-- /ko -->
 	</div>
 </div>
