--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -14,6 +14,10 @@
 		overflow: visible;
 	}
 
+	.component-paginator-dashed {
+		display: none;
+	}
+
 	.slider-viewport {
 		@include pos(auto, auto, $sizeGrid * 2, 50%);
 		@include size(auto, $stepHeight);
@@ -297,5 +301,9 @@
 			}
 		}
 
+		.component-paginator-dashed {
+			display: block;
+			margin-top: $sizeGrid;
+		}
 	}
 }
