--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -1,34 +1,38 @@
 <nav class="component-menu">
-	<div class="scroll-wrapper" data-bind="scrollbar: {}">
-		<div class="scroll-content" data-scroll-content>
-			<div class="scroll-inner" data-content-inner>
-				<ul class="menu-items" data-bind="foreach: dataManager.settingsModel.initDataModel.navigationModel.getAllItems()">
+	<div class="menu-background"></div>
+	<div class="menu-content">
+		<div class="scroll-wrapper" data-bind="scrollbar: {}">
+			<div class="scroll-content" data-scroll-content>
+				<div class="scroll-inner" data-content-inner>
+					<ul class="menu-items"
+					    data-bind="foreach: dataManager.settingsModel.initDataModel.navigationModel.getAllItems()">
 
-					<li class="menu-item">
+						<li class="menu-item">
 
-						<!-- ko if: $data.link.target !== $root.Routes.CONTACT_US -->
+							<!-- ko if: $data.link.target !== $root.Routes.CONTACT_US -->
 							<!-- ko with: $data.link -->
-								<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: $data.target}]">
-									<span class="label" data-bind="html: $data.label"></span>
-								</a>
+							<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: $data.target}]">
+								<span class="label" data-bind="html: $data.label"></span>
+							</a>
 							<!-- /ko -->
-						<!-- /ko -->
+							<!-- /ko -->
 
-						<!-- ko if: $data.link.target == $root.Routes.CONTACT_US -->
+							<!-- ko if: $data.link.target == $root.Routes.CONTACT_US -->
 							<button class="button main-link" data-bind="tap: $root.handleClickContact.bind($root)">
 								<span class="label" data-bind="html: $data.link.label"></span>
 							</button>
-						<!-- /ko -->
+							<!-- /ko -->
 
-						<!-- ko if: $data.subtitle -->
+							<!-- ko if: $data.subtitle -->
 							<div class="subtitle" data-bind="html: $data.subtitle"></div>
-						<!-- /ko -->
-					</li>
-				</ul>
+							<!-- /ko -->
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-		<div class="scroll-bar" data-scroll-bar>
-			<span class="knob" data-scroll-knob></span>
+			<div class="scroll-bar" data-scroll-bar>
+				<span class="knob" data-scroll-knob></span>
+			</div>
 		</div>
 	</div>
 </nav>
