--- a/deploy/htdocs/version/src/inc/style/component/_menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_menu.scss
@@ -1,9 +1,22 @@
 .component-menu {
 	@include size($sizeGrid * 14, calc(100vh - #{$sizeGrid * 2}));
 	@include pos($sizeGrid * 2, 0, 0, auto);
-	background: $colorPrimary;
 	position: fixed;
+	overflow: hidden;
 	z-index: zindex($layout, menu);
+
+	.menu-content,
+	.menu-background {
+		@include coverer();
+		@include size(100%, 100%);
+		position: absolute;
+	}
+
+	.menu-background {
+		box-sizing: content-box;
+		background: $colorPrimary;
+		border-bottom: 100vh solid $colorPrimary;
+	}
 
 	.menu-items {
 		@extend %reset-list;
@@ -38,7 +51,6 @@
 			}
 		}
 	}
-
 
 	.subtitle {
 		color: $colorSecondary;
