--- a/deploy/htdocs/version/src/inc/style/page/_index.scss
+++ b/deploy/htdocs/version/src/inc/style/page/_index.scss
@@ -7,6 +7,7 @@
 	width: 100%;
 	height: auto;
 	position: relative;
+	overflow: hidden;
 	z-index: zindex($layout, content);
 
 	[data-gaia-container="index"] {
