--- a/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
@@ -91,8 +91,12 @@
 		.hover-container {
 			transform: none;
 			left: 0;
-			border-left: none;
+
 		}
+	}
+
+	.index-1 & {
+		border-left: none;
 	}
 
 	.index-3 &,
