--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
@@ -4,10 +4,22 @@
 
 	.site-frame {
 		height: 100%;
+
 	}
 
 	.overrule-overlap {
 		height: 100%;
+		position: relative;
+
+
+		//&:after {
+		//	content: '';
+		//	position: absolute;
+		//	@include pos(0, 0, 0, auto);
+		//	background: #fff;
+		//	@include size(720px, 480px);
+		//	z-index: 2;
+		//}
 	}
 
 	.image {
@@ -21,6 +33,8 @@
 		position: absolute;
 		background: #fff;
 		padding: $sizeGrid * 2;
+		z-index: 3!important;;
+
 
 		&:after {
 			position: absolute;
@@ -129,7 +143,7 @@
 			margin-bottom: $sizeGrid*3;
 		}
 
-		&.left-aligned {}
+		&.left-aligned { }
 
 		&.right-aligned {
 			.content {
