Tweaked heading size on the article teaser

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
@@ -5,7 +5,7 @@
 				image: data.image,
 				state: $root.deviceState()
 			}" />
-			<h2 class="heading heading-06" data-bind="html: data.heading"></h2>
+			<h2 class="hover-heading" data-bind="html: data.heading"></h2>
 			<span class="hover-icon" data-bind="icon: 'circle-arrow-right'"></span>
 	</figure>
 	<aside>
