--- a/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
@@ -6,7 +6,7 @@
 	color: #fff;
 	text-align: right;
 	pointer-events: none;
-	transition: right .2s ease(easeInOut);
+	transition: right .8s ease(easeOutExpo);
 
 	@include hover() {
 		right: 0;
