Update crossfader transitions Update filter block transitions Update info block transitions

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-info/block-info.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-info/block-info.html
@@ -1,5 +1,4 @@
 <div class="component-block-info" data-bind="with: data">
-
 	<div class="inner-content">
 		<div class="description">
 			<h2 class="heading-06 heading" data-bind="html: heading"></h2>
@@ -16,4 +15,5 @@
 			}
 		} --><!-- /ko -->
 	</div>
+	<div class="clip-mask"></div>
 </div>
