--- a/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
@@ -16,6 +16,10 @@
 		.component-block-info {
 			margin-left: 0;
 			margin-bottom: $sizeGrid * 2;
+
+			.clip-mask {
+				background: $colorLightGrey;
+			}
 		}
 	}
 
