Tweak program module block

--- a/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
@@ -83,7 +83,7 @@
 		overflow: hidden;
 		position: absolute;
 		border-left: 1px solid #e7e7e7;
-		transition: background .2s ease(easeInOut);
+		//transition: background .2s ease(easeInOut);
 	}
 
 	.index-1 &,
