--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -6,6 +6,15 @@
 				onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller))
 			} --><!-- /ko -->
 		<!-- /ko -->
+
+		<div class="slide-details" data-bind="foreach:data.steps">
+			<div class="slide-detail">
+				<h2 class="heading heading-07" data-bind="html: secondaryHeading"></h2>
+				<p class="copy copy-01" data-bind="html: secondaryParagraph"></p>
+			</div>
+		</div>
+
+
 		<div class="slider-viewport infinite-carousel js-image-carousel">
 			<ul class="steps site-frame js-slides" data-bind="foreach: data.steps">
 				<li class="step js-slide" data-bind="css: {'is-active': $root.activeIndex() === $index()}, events: [
