Add the option to add a overlay to the image crossfader

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -7,13 +7,14 @@
 
 		// Always apply a dark blue layer on top of the crossfader
 		.component-image-crossfader {
-			&:after {
+			.mask {
 				@include coverer();
 				@include size(100%);
 				position: absolute;
 				content: '';
 				background: rgba($colorPrimary, .5);
 			}
+
 		}
 	}
 
