Update the how to advertise block

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
@@ -17,9 +17,11 @@
 		</div>
 
 		<div class="advertisement-steps">
-			<div class="js-draggable-container">
+			<div class="steps-viewport">
 				<ul class="steps js-draggable-element" data-bind="foreach: data.steps">
-					<li class="step" data-bind="css: {'is-active': $index() === $root.activeIndex()}, tap: $root.handleStepClick.bind($root, $index())">
+					<li class="step" data-bind="events: [
+						[ $root.MouseEventHelper.CLICK, $root.handleStepClick.bind($root, $index()) ]
+					]">
 						<figure>
 							<div class="icon abs-center" data-bind="icon: icon"></div>
 						</figure>
