Add the notification component for displaying alerts and error messages

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -93,6 +93,7 @@
 @import "block/block-market-map";
 
 @import "slideout-panel";
+@import 'notification';
 
 @import "block/block-network-overview";
 @import "block/block-article-teaser";
