Add dummy popup after form submission

--- a/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
@@ -1,4 +1,4 @@
-<form class="component-slideout-panel_contact" data-bind="with: data">
+<form class="component-slideout-panel_contact" data-bind="with: data, submit: onSubmit">
 
 	<h3 class="sub-title copy" data-bind="html: subHeading"></h3>
 	<h2 class="heading-06 heading" data-bind="html: heading"></h2>
