--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -82,13 +82,26 @@
 		</button>
 	</div>
 
-	<form class="search-bar">
+	<form class="search-bar" data-bind="submit: $root.handleSubmit.bind($root)">
 		<div class="input-text-main input-text large">
-			<input required type="text" name="search" id="search" value="" />
+			<input type="text" name="search" id="search" data-bind="
+			live: $root.searchQuery,
+			focusBorder: {
+				value: $root.searchQuery
+			}"/>
 			<span class="placeholder-label">Which region do you want to advertise in?</span>
 			<span class="focus-border"></span>
+
+			<!-- ko with: $root.autoCompleteValue() -->
+				<button class="button auto-complete" data-bind="events: [
+					[$root.MouseEventHelper.CLICK, $root.handleAutoCompleteClick.bind($root, $data)]
+				]">
+					{{$data.city}}, {{$data.statePostalCode}}
+				</button>
+			<!-- /ko -->
+
 		</div>
-		<button class="button-search button" data-bind="html: searchLabel"></button>
+		<button class="button-search button" data-bind="html: searchLabel" type="submit"></button>
 	</form>
 
 	<button class="service-info button" data-bind="tap: $root.handleServiceClick.bind($root)">
