--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
@@ -1,13 +1,12 @@
 <div class="component-block-map-secondary">
 	<div class="site-frame">
-		<div class="aspect-ratio-wrapper overrule-overlap">
-			<div class="aspect-ratio-inner abs-fill">
-				<div class="map-content">
-					<h2 class="main-title heading heading-06" data-bind="html: data.heading"></h2>
-					<h3 class="sub-title copy copy-02" data-bind="html: data.subHeading"></h3>
-					<div class="description copy copy-01" data-bind="html: data.paragraph"></div>
+		<div class="aspect-ratio-wrapper">
+			<div class="map-content">
+				<h2 class="main-title heading heading-06" data-bind="html: data.heading"></h2>
+				<h3 class="sub-title copy copy-02" data-bind="html: data.subHeading"></h3>
+				<div class="description copy copy-01" data-bind="html: data.paragraph"></div>
 
-					<!-- ko if: data.link -->
+				<!-- ko if: data.link -->
 					<!-- ko component: {
 						name: 'button/button-main',
 						onComplete: $root.controller.callbackCounter.get(),
@@ -17,9 +16,14 @@
 							disabled: $root.findOutMoreDisabled
 						}
 					} --><!-- /ko -->
-					<!-- /ko -->
-				</div>
+				<!-- /ko -->
+			</div>
+			<div class="map-image-wrapper">
 				<div class="map-image">
+					<img class="sequence-background" data-bind="image: {
+						image: data.sequenceBackground,
+						state: $root.deviceState()
+					}">
 					<!-- ko component: {
 						name: 'image-sequence',
 						onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
@@ -27,14 +31,55 @@
 							imageSequence: data.imageSequence
 						}
 					} --><!-- /ko -->
-					<img class="abs-fill" src="data/image/map-secondary/map-background.png" alt="">
-				</div>
 
-				<div class="progress-bar">
-					<div class="progress" data-bind="style: {'width': ($root.sequenceProgress() * 100) + '%'}"></div>
+					<div class="progress-bar">
+						<div class="progress" data-bind="style: {'width': ($root.sequenceProgress() * 100) + '%'}"></div>
+					</div>
 				</div>
-
 			</div>
 		</div>
+
+
+
+
+		<!--<div class="aspect-ratio-wrapper overrule-overlap">-->
+			<!--<div class="aspect-ratio-inner abs-fill">-->
+				<!--<div class="map-content">-->
+					<!--<h2 class="main-title heading heading-06" data-bind="html: data.heading"></h2>-->
+					<!--<h3 class="sub-title copy copy-02" data-bind="html: data.subHeading"></h3>-->
+					<!--<div class="description copy copy-01" data-bind="html: data.paragraph"></div>-->
+
+					<!--&lt;!&ndash; ko if: data.link &ndash;&gt;-->
+					<!--&lt;!&ndash; ko component: {-->
+						<!--name: 'button/button-main',-->
+						<!--onComplete: $root.controller.callbackCounter.get(),-->
+						<!--options: {-->
+							<!--action: data.link,-->
+							<!--size: $root.ButtonSize.LARGE,-->
+							<!--disabled: $root.findOutMoreDisabled-->
+						<!--}-->
+					<!--} &ndash;&gt;&lt;!&ndash; /ko &ndash;&gt;-->
+					<!--&lt;!&ndash; /ko &ndash;&gt;-->
+				<!--</div>-->
+				<!--<div class="map-image">-->
+					<!--<img class="abs-fill" data-bind="image: {-->
+						<!--image: data.sequenceBackground,-->
+						<!--state: $root.deviceState()-->
+					<!--}">-->
+					<!--&lt;!&ndash; ko component: {-->
+						<!--name: 'image-sequence',-->
+						<!--onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),-->
+						<!--options: {-->
+							<!--imageSequence: data.imageSequence-->
+						<!--}-->
+					<!--} &ndash;&gt;&lt;!&ndash; /ko &ndash;&gt;-->
+				<!--</div>-->
+
+				<!--<div class="progress-bar">-->
+					<!--<div class="progress" data-bind="style: {'width': ($root.sequenceProgress() * 100) + '%'}"></div>-->
+				<!--</div>-->
+
+			<!--</div>-->
+		<!--</div>-->
 	</div>
 </div>
