--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map-secondary.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map-secondary.scss
@@ -2,22 +2,33 @@
 	user-select: none;
 
 	.aspect-ratio-wrapper {
-		@include aspect-ratio($sizeGrid * 32, $sizeGrid * 19);
-	}
-
-	.aspect-ratio-inner {
-		padding: $sizeGrid * 2;
+		position: relative;
 		background: $colorLightGrey;
+		padding: $sizeGrid * 2;
 		font-size: 0;
-		display: flex;
-		flex-wrap: nowrap;
 	}
 
 	.map-content {
-		@include size($sizeGrid * 9, 100%);
-		padding-right: $sizeGrid * 2;
+		@include size($sizeGrid * 9, auto);
 		display: inline-block;
 		vertical-align: top;
+	}
+
+	.map-image-wrapper {
+		@include size(calc(100% - #{$sizeGrid * 9}), auto);
+		display: inline-block;
+		vertical-align: top;
+	}
+
+	.map-image {
+		@include size(100%, auto);
+		@include aspect-ratio(1280px, 680px);
+
+		.sequence-background,
+		.component-image-sequence {
+			@include coverer();
+			@include size(100%);
+		}
 	}
 
 	.main-title {
@@ -34,26 +45,13 @@
 		}
 	}
 
-	.map-image {
-		@include size(100%, 100%);
-		display: inline-block;
-		vertical-align: top;
-		position: relative;
-
-		img {
-			@include coverer();
-			@include size(100%);
-		}
-
-		.component-image-sequence {
-			@include coverer();
-			@include size(100%);
-		}
+	.component-button-main {
+		margin-top: $sizeGrid;
 	}
 
 	.progress-bar {
-		@include size(67%, 1px);
-		@include pos(auto, $sizeGrid * 2, calc(#{$sizeGrid * 2.5} + 0.5rem), auto);
+		@include size(100%, 1px);
+		@include pos(auto, 0, 0, auto);
 		background: $colorBorder;
 		position: absolute;
 
@@ -66,60 +64,21 @@
 		}
 	}
 
-	.component-button-main {
-		@include pos(auto, auto, $sizeGrid * 2 , $sizeGrid * 2);
-		position: absolute;
-	}
-
-	// Breakpoints
 	@include respond-to(SMALL) {
-
 		.aspect-ratio-wrapper {
-			&:before {
-				display: none;
-			}
+			display: flex;
+			flex-direction: column;
 		}
 
-		.aspect-ratio-inner {
-			position: relative;
-			height: auto;
-			flex-wrap: wrap;
-			padding: $sizeGrid*2;
-		}
-
-		.progress-bar {
-			@include pos(auto, auto, auto, auto);
-			position: relative;
-			transform: none;
+		.map-image-wrapper {
 			width: 100%;
-			order: 1;
-			margin: $sizeGrid*2 auto $sizeGrid*2;
-		}
-
-		.map-content {
-			@include size(100%, auto);
-			padding-right: 0;
-			order: 2;
-		}
-
-		.map-image {
-			@include aspect-ratio($sizeGrid * 32, $sizeGrid * 19);
 			order: 0;
 		}
 
-		.main-title {
-			margin-bottom: $sizeGrid*2;
-		}
-
-		.sub-title {
-			margin-bottom: $sizeGrid;
-			font-size: mobile-size(2.8rem);
-		}
-
-		.component-button-main {
-			position: relative;
-			@include pos(auto, auto, auto);
-			margin-top: $sizeGrid*3;
+		.map-content {
+			order: 1;
+			width: 100%;
+			margin-top: $sizeGrid * 2;
 		}
 	}
 }
