--- a/deploy/htdocs/version/src/inc/style/component/block/_block-button.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-button.scss
@@ -1,5 +1,8 @@
 .component-block-button {
-	padding: .5rem $sizeGrid * 7;
+
+	.site-frame	{
+		padding: 0.5rem $sizeGrid * 7;
+	}
 
 	&.align-left {
 		text-align: left;
