--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
@@ -27,7 +27,7 @@
 		position: absolute;
 
 		.pagination-number {
-			@include pos(0, auto, auto, 0);
+			@include pos(-10px, auto, auto, 0);
 			transform: translate(-50%, -50%);
 			position: absolute;
 		}
