--- a/deploy/htdocs/version/src/inc/style/asset/_logo.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-	@include size(140px, 42px);
+	@include size(135px, 45px);
 
 	.text-top,
 	.text-bottom,
@@ -50,6 +50,18 @@
 		.arrow {
 			color: $colorSecondary;
 		}
+	}
+
+	@include respond-to(XX_LARGE){
+		@include size(120px, 40px);
+	}
+
+	@include respond-to(X_LARGE){
+		@include size(110px, 35px);
+	}
+
+	@include respond-to(LARGE){
+		@include size(90px, 30px);
 	}
 
 	@include respond-to(SMALL){
