--- a/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
@@ -1,7 +1,7 @@
 .component-filter-menu {
 	position: relative;
 	background-color: white;
-	box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.05);
+	box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.05);
 
 	// Menu
 	.menu {
@@ -14,12 +14,19 @@
 		text-transform: none;
 	}
 
+	.reset-wrapper {
+		@include size($sizeGrid * 2);
+		position: relative;
+	}
+
 	.button-reset {
-		@include size($sizeGrid*2);
+		@include abs-center($sizeGridSecondary);
+		border-radius: 100%;
 		color: $colorTertiary;
+		border: 1px solid $colorTertiary;
 
 		.icon {
-
+			@include size(14px);
 		}
 	}
 
@@ -35,7 +42,8 @@
 		font-size: 1.2rem;
 		line-height: $sizeGrid*2;
 		font-family: $fontOpenSans;
-		text-align: center;
+		text-align: left;
+		padding-left: $sizeGrid;
 		transition: background-color 250ms ease(easeOutExpo), color 250ms ease(easeOutExpo);;
 
 		> .icon {
@@ -242,7 +250,7 @@
 		// Filter Overlay Content
 		.filter-overlay-content {
 			position: relative;
-			height: calc( 100% - #{$sizeGrid*4});
+			height: calc(100% - #{$sizeGrid*4});
 			overflow: hidden;
 		}
 
