--- a/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
@@ -11,7 +11,7 @@
 		@include size(8 * $sizeGrid, 100%);
 		@include pos(0, auto, 0, 0);
 		position: absolute;
-		padding: $sizeGrid;
+		padding: $sizeGrid * 1.5;
 		color: $colorPrimary;
 
 		&:after {
@@ -45,7 +45,7 @@
 		}
 
 		.hover-heading {
-			@include pos($sizeGrid, auto, auto, $sizeGrid);
+			@include pos($sizeGrid * 1.5, auto, auto, $sizeGrid);
 			font: 600 2rem/1 $fontOpenSans;
 			width: 50%;
 			transform: translateX($sizeGrid * 2);
@@ -56,7 +56,7 @@
 
 		.hover-icon {
 			@include size($sizeGrid);
-			@include pos(auto, auto, $sizeGrid, $sizeGrid);
+			@include pos(auto, auto, $sizeGrid * 1.5, $sizeGrid);
 			transform: translateX($sizeGrid * 2);
 			opacity: 0;
 			position: absolute;
