--- a/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
@@ -1,6 +1,6 @@
 .component-block-persona-selector {
 	$buttonWidth: $sizeGrid * 8;
-	$buttonHeight: $sizeGrid * 4;
+	$buttonHeight: $sizeGrid * 3.5;
 	$animationDuration: .3s;
 	$ease: ease(easeInOut);
 	@include aspect-ratio(1600px, 880px);
@@ -8,7 +8,6 @@
 
 	.persona-content-wrapper {
 		overflow: hidden;
-
 	}
 
 	.background-triangle {
@@ -159,6 +158,10 @@
 			padding-left: $sizeGrid / 2;
 		}
 
+		.copy-01 {
+			font-weight: 600;
+		}
+
 		.pagination-number {
 			@include pos(0, auto, auto, 0);
 			transform: translateY(-50%);
@@ -220,6 +223,53 @@
 		@include pos(auto, 0, 0, 0);
 		position: absolute;
 		display: none;
+	}
+
+	@include respond-to(XX_LARGE) {
+		$buttonHeight: $sizeGrid * 2.5;
+
+		.persona-button,
+		.persona-option {
+			height: $buttonHeight;
+		}
+
+		.persona-button {
+			&:after {
+				height: $buttonHeight - $sizeGrid;
+			}
+
+			.label-wrapper {
+				line-height: $buttonHeight;
+			}
+		}
+	}
+
+	@include respond-to(LARGE) {
+		$buttonHeight: $sizeGrid * 2;
+
+		.persona-button,
+		.persona-option {
+			height: $buttonHeight;
+		}
+
+		.pagination-number {
+			display: none;
+		}
+
+		.persona-button {
+			&:after {
+				height: $buttonHeight - $sizeGrid;
+			}
+
+			.label-wrapper {
+				line-height: $buttonHeight;
+			}
+
+			.label {
+				padding-left: 0;
+			}
+		}
+
 	}
 
 	@include respond-to(SMALL) {
