--- a/deploy/htdocs/version/src/inc/style/type/_copy.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_copy.scss
@@ -1,6 +1,6 @@
 %copy-01,
 .copy-01 {
-	font: 400 1.6rem / 1.625 $fontOpenSans;
+	font: 400 1.8rem / 1.625 $fontOpenSans;
 }
 
 .copy-02 {
@@ -19,8 +19,19 @@
 	font: 600 2rem / 1.5 $fontOpenSans;
 }
 
-
 // Breakpoints
+@include respond-to(XX_LARGE) {
+	.copy-01 {
+		font-size: 1.6rem;
+	}
+}
+
+@include respond-to(X_LARGE) {
+	.copy-01 {
+		font-size: 1.5rem;
+	}
+}
+
 @include respond-to(SMALL) {
 	.copy-01 {
 		font-size: mobile-size(2.8rem);
