Disable super fast clicking on the path to purchase block
ready
#38

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
@@ -26,7 +26,7 @@
 							<div class="icon abs-center" data-bind="icon: icon"></div>
 						</figure>
 						<aside>
-							<p class="copy copy-02" data-bind="html: heading"></p>
+							<h2 class="heading heading-07" data-bind="html: heading"></h2>
 							<p class="copy copy-01" data-bind="html: paragraph"></p>
 						</aside>
 					</li>
