--- a/deploy/htdocs/version/src/inc/style/component/block/_block-how-to-advertise.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-how-to-advertise.scss
@@ -47,6 +47,10 @@
 			@include size($sizeGrid * 5);
 		}
 
+		.heading {
+			margin-bottom: $sizeGrid / 4;
+		}
+
 		aside {
 			@include size($sizeGrid * 8, auto);
 			display: inline-block;
@@ -90,7 +94,7 @@
 				padding: 0 $sizeGrid * 2;
 			}
 
-			.copy-02 {
+			.heading {
 				margin-bottom: $sizeGrid/2;
 			}
 		}
