--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
@@ -21,14 +21,12 @@
 		height: auto;
 		position: absolute;
 		background: #fff;
-		padding: $sizeGrid * 3;
+		padding: $sizeGrid * 2 $sizeGrid * 2.5;
 
 		&:after {
 			position: absolute;
 			bottom: 0;
 			content: '';
-			//@include size(0);
-			//border-style: solid;
 		}
 	}
 
