--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -58,3 +58,4 @@
 	</div>
 </div>
 
+<div class="device-state-indicator" data-bind="html: DeviceState[dataManager.deviceStateTracker.currentState()]"></div>
