--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -49,6 +49,8 @@
 	onComplete: $root.controller.callbackCounter.get($root.controller.handleVideoOverlayReady.bind($root.controller))
 } --><!-- /ko -->
 
+
+<!-- ko if: DEBUG -->
 <div class="grid">
 	<div class="base-grid regular-grid" data-bind="foreach: new Array(34)">
 		<div class="row"></div>
@@ -59,3 +61,4 @@
 </div>
 
 <div class="device-state-indicator" data-bind="html: DeviceState[dataManager.deviceStateTracker.currentState()]"></div>
+<!-- /ko -->
